// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for build tool cfamily: with branch support 1`] = `
<div
  className="boxed-group-inner"
>
  <div
    className="flex-columns"
  >
    <div
      className="flex-column-full"
    >
      <React.Fragment>
        <GithubCFamilyExampleRepositories
          ci="gitlab-ci"
          className="big-spacer-bottom abs-width-600"
        />
        <div
          className="big-spacer-bottom"
        >
          <FormattedMessage
            defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.description"
            id="onboarding.tutorial.with.gitlab_ci.yml.description"
            values={
              {
                "filename": <React.Fragment>
                  <code
                    className="rule"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.filename
                  </code>
                  <ClipboardIconButton
                    className="little-spacer-left"
                    copyValue="onboarding.tutorial.with.gitlab_ci.yml.filename"
                  />
                </React.Fragment>,
              }
            }
          />
        </div>
        <div
          className="big-spacer-bottom abs-width-600"
        >
          <PipeCommand
            branchesEnabled={true}
            buildTool="cfamily"
            mainBranchName="main"
            projectKey="test"
          />
        </div>
        <p
          className="little-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.baseconfig
        </p>
        <p>
          onboarding.tutorial.with.gitlab_ci.yml.existing
        </p>
      </React.Fragment>
    </div>
  </div>
  <FinishButton
    onClick={[MockFunction]}
  />
</div>
`;

exports[`should render correctly for build tool cfamily: without branch support 1`] = `
<div
  className="boxed-group-inner"
>
  <div
    className="flex-columns"
  >
    <div
      className="flex-column-full"
    >
      <React.Fragment>
        <GithubCFamilyExampleRepositories
          ci="gitlab-ci"
          className="big-spacer-bottom abs-width-600"
        />
        <div
          className="big-spacer-bottom"
        >
          <FormattedMessage
            defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.description"
            id="onboarding.tutorial.with.gitlab_ci.yml.description"
            values={
              {
                "filename": <React.Fragment>
                  <code
                    className="rule"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.filename
                  </code>
                  <ClipboardIconButton
                    className="little-spacer-left"
                    copyValue="onboarding.tutorial.with.gitlab_ci.yml.filename"
                  />
                </React.Fragment>,
              }
            }
          />
        </div>
        <div
          className="big-spacer-bottom abs-width-600"
        >
          <PipeCommand
            branchesEnabled={false}
            buildTool="cfamily"
            mainBranchName="main"
            projectKey="test"
          />
        </div>
        <p
          className="little-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.baseconfig.no_branches
        </p>
        <p>
          onboarding.tutorial.with.gitlab_ci.yml.existing
        </p>
      </React.Fragment>
    </div>
  </div>
  <FinishButton
    onClick={[MockFunction]}
  />
</div>
`;

exports[`should render correctly for build tool dotnet: with branch support 1`] = `
<div
  className="boxed-group-inner"
>
  <div
    className="flex-columns"
  >
    <div
      className="flex-column-full"
    >
      <React.Fragment>
        <div
          className="big-spacer-bottom"
        >
          <FormattedMessage
            defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.description"
            id="onboarding.tutorial.with.gitlab_ci.yml.description"
            values={
              {
                "filename": <React.Fragment>
                  <code
                    className="rule"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.filename
                  </code>
                  <ClipboardIconButton
                    className="little-spacer-left"
                    copyValue="onboarding.tutorial.with.gitlab_ci.yml.filename"
                  />
                </React.Fragment>,
              }
            }
          />
        </div>
        <div
          className="big-spacer-bottom abs-width-600"
        >
          <PipeCommand
            branchesEnabled={true}
            buildTool="dotnet"
            mainBranchName="main"
            projectKey="test"
          />
        </div>
        <p
          className="little-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.baseconfig
        </p>
        <p>
          onboarding.tutorial.with.gitlab_ci.yml.existing
        </p>
      </React.Fragment>
    </div>
  </div>
  <FinishButton
    onClick={[MockFunction]}
  />
</div>
`;

exports[`should render correctly for build tool dotnet: without branch support 1`] = `
<div
  className="boxed-group-inner"
>
  <div
    className="flex-columns"
  >
    <div
      className="flex-column-full"
    >
      <React.Fragment>
        <div
          className="big-spacer-bottom"
        >
          <FormattedMessage
            defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.description"
            id="onboarding.tutorial.with.gitlab_ci.yml.description"
            values={
              {
                "filename": <React.Fragment>
                  <code
                    className="rule"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.filename
                  </code>
                  <ClipboardIconButton
                    className="little-spacer-left"
                    copyValue="onboarding.tutorial.with.gitlab_ci.yml.filename"
                  />
                </React.Fragment>,
              }
            }
          />
        </div>
        <div
          className="big-spacer-bottom abs-width-600"
        >
          <PipeCommand
            branchesEnabled={false}
            buildTool="dotnet"
            mainBranchName="main"
            projectKey="test"
          />
        </div>
        <p
          className="little-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.baseconfig.no_branches
        </p>
        <p>
          onboarding.tutorial.with.gitlab_ci.yml.existing
        </p>
      </React.Fragment>
    </div>
  </div>
  <FinishButton
    onClick={[MockFunction]}
  />
</div>
`;

exports[`should render correctly for build tool gradle: with branch support 1`] = `
<div
  className="boxed-group-inner"
>
  <div
    className="flex-columns"
  >
    <div
      className="flex-column-full"
    >
      <React.Fragment>
        <div
          className="big-spacer-bottom"
        >
          <FormattedMessage
            defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.description"
            id="onboarding.tutorial.with.gitlab_ci.yml.description"
            values={
              {
                "filename": <React.Fragment>
                  <code
                    className="rule"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.filename
                  </code>
                  <ClipboardIconButton
                    className="little-spacer-left"
                    copyValue="onboarding.tutorial.with.gitlab_ci.yml.filename"
                  />
                </React.Fragment>,
              }
            }
          />
        </div>
        <div
          className="big-spacer-bottom abs-width-600"
        >
          <PipeCommand
            branchesEnabled={true}
            buildTool="gradle"
            mainBranchName="main"
            projectKey="test"
          />
        </div>
        <p
          className="little-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.baseconfig
        </p>
        <p>
          onboarding.tutorial.with.gitlab_ci.yml.existing
        </p>
      </React.Fragment>
    </div>
  </div>
  <FinishButton
    onClick={[MockFunction]}
  />
</div>
`;

exports[`should render correctly for build tool gradle: without branch support 1`] = `
<div
  className="boxed-group-inner"
>
  <div
    className="flex-columns"
  >
    <div
      className="flex-column-full"
    >
      <React.Fragment>
        <div
          className="big-spacer-bottom"
        >
          <FormattedMessage
            defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.description"
            id="onboarding.tutorial.with.gitlab_ci.yml.description"
            values={
              {
                "filename": <React.Fragment>
                  <code
                    className="rule"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.filename
                  </code>
                  <ClipboardIconButton
                    className="little-spacer-left"
                    copyValue="onboarding.tutorial.with.gitlab_ci.yml.filename"
                  />
                </React.Fragment>,
              }
            }
          />
        </div>
        <div
          className="big-spacer-bottom abs-width-600"
        >
          <PipeCommand
            branchesEnabled={false}
            buildTool="gradle"
            mainBranchName="main"
            projectKey="test"
          />
        </div>
        <p
          className="little-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.baseconfig.no_branches
        </p>
        <p>
          onboarding.tutorial.with.gitlab_ci.yml.existing
        </p>
      </React.Fragment>
    </div>
  </div>
  <FinishButton
    onClick={[MockFunction]}
  />
</div>
`;

exports[`should render correctly for build tool maven: with branch support 1`] = `
<div
  className="boxed-group-inner"
>
  <div
    className="flex-columns"
  >
    <div
      className="flex-column-full"
    >
      <React.Fragment>
        <div
          className="big-spacer-bottom"
        >
          <FormattedMessage
            defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.description"
            id="onboarding.tutorial.with.gitlab_ci.yml.description"
            values={
              {
                "filename": <React.Fragment>
                  <code
                    className="rule"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.filename
                  </code>
                  <ClipboardIconButton
                    className="little-spacer-left"
                    copyValue="onboarding.tutorial.with.gitlab_ci.yml.filename"
                  />
                </React.Fragment>,
              }
            }
          />
        </div>
        <div
          className="big-spacer-bottom abs-width-600"
        >
          <PipeCommand
            branchesEnabled={true}
            buildTool="maven"
            mainBranchName="main"
            projectKey="test"
          />
        </div>
        <p
          className="little-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.baseconfig
        </p>
        <p>
          onboarding.tutorial.with.gitlab_ci.yml.existing
        </p>
      </React.Fragment>
    </div>
  </div>
  <FinishButton
    onClick={[MockFunction]}
  />
</div>
`;

exports[`should render correctly for build tool maven: without branch support 1`] = `
<div
  className="boxed-group-inner"
>
  <div
    className="flex-columns"
  >
    <div
      className="flex-column-full"
    >
      <React.Fragment>
        <div
          className="big-spacer-bottom"
        >
          <FormattedMessage
            defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.description"
            id="onboarding.tutorial.with.gitlab_ci.yml.description"
            values={
              {
                "filename": <React.Fragment>
                  <code
                    className="rule"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.filename
                  </code>
                  <ClipboardIconButton
                    className="little-spacer-left"
                    copyValue="onboarding.tutorial.with.gitlab_ci.yml.filename"
                  />
                </React.Fragment>,
              }
            }
          />
        </div>
        <div
          className="big-spacer-bottom abs-width-600"
        >
          <PipeCommand
            branchesEnabled={false}
            buildTool="maven"
            mainBranchName="main"
            projectKey="test"
          />
        </div>
        <p
          className="little-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.baseconfig.no_branches
        </p>
        <p>
          onboarding.tutorial.with.gitlab_ci.yml.existing
        </p>
      </React.Fragment>
    </div>
  </div>
  <FinishButton
    onClick={[MockFunction]}
  />
</div>
`;

exports[`should render correctly for build tool other: with branch support 1`] = `
<div
  className="boxed-group-inner"
>
  <div
    className="flex-columns"
  >
    <div
      className="flex-column-full"
    >
      <React.Fragment>
        <div
          className="big-spacer-bottom"
        >
          <FormattedMessage
            defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.description"
            id="onboarding.tutorial.with.gitlab_ci.yml.description"
            values={
              {
                "filename": <React.Fragment>
                  <code
                    className="rule"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.filename
                  </code>
                  <ClipboardIconButton
                    className="little-spacer-left"
                    copyValue="onboarding.tutorial.with.gitlab_ci.yml.filename"
                  />
                </React.Fragment>,
              }
            }
          />
        </div>
        <div
          className="big-spacer-bottom abs-width-600"
        >
          <PipeCommand
            branchesEnabled={true}
            buildTool="other"
            mainBranchName="main"
            projectKey="test"
          />
        </div>
        <p
          className="little-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.baseconfig
        </p>
        <p>
          onboarding.tutorial.with.gitlab_ci.yml.existing
        </p>
      </React.Fragment>
    </div>
  </div>
  <FinishButton
    onClick={[MockFunction]}
  />
</div>
`;

exports[`should render correctly for build tool other: without branch support 1`] = `
<div
  className="boxed-group-inner"
>
  <div
    className="flex-columns"
  >
    <div
      className="flex-column-full"
    >
      <React.Fragment>
        <div
          className="big-spacer-bottom"
        >
          <FormattedMessage
            defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.description"
            id="onboarding.tutorial.with.gitlab_ci.yml.description"
            values={
              {
                "filename": <React.Fragment>
                  <code
                    className="rule"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.filename
                  </code>
                  <ClipboardIconButton
                    className="little-spacer-left"
                    copyValue="onboarding.tutorial.with.gitlab_ci.yml.filename"
                  />
                </React.Fragment>,
              }
            }
          />
        </div>
        <div
          className="big-spacer-bottom abs-width-600"
        >
          <PipeCommand
            branchesEnabled={false}
            buildTool="other"
            mainBranchName="main"
            projectKey="test"
          />
        </div>
        <p
          className="little-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.baseconfig.no_branches
        </p>
        <p>
          onboarding.tutorial.with.gitlab_ci.yml.existing
        </p>
      </React.Fragment>
    </div>
  </div>
  <FinishButton
    onClick={[MockFunction]}
  />
</div>
`;

exports[`should render correctly: Step wrapper 1`] = `
<Step
  finished={true}
  onOpen={[MockFunction]}
  open={true}
  renderForm={[Function]}
  stepNumber={3}
  stepTitle="onboarding.tutorial.with.gitlab_ci.yml.title"
/>
`;

exports[`should render correctly: initial content 1`] = `
<div
  className="boxed-group-inner"
>
  <div
    className="flex-columns"
  >
    <div
      className="flex-column-full"
    />
  </div>
  <FinishButton
    onClick={[MockFunction]}
  />
</div>
`;
